--- a/RegistroProdcuctos/res/values/strings.xml
+++ b/RegistroProdcuctos/res/values/strings.xml
@@ -7,5 +7,8 @@
     <string name="nombre">Nombre:</string>
     <string name="descripcion">Descripcion:</string>
     <string name="grabar">Guardar</string>
+    <string name="title_activity_formulario">Formulario</string>
+    <string name="nuevoProducto">Nuevo Producto</string>
+    <string name="mapa">Mapa</string>
 
 </resources>
