menu en actionbar agrupado

--- a/RegistroProdcuctos/res/values/strings.xml
+++ b/RegistroProdcuctos/res/values/strings.xml
@@ -13,5 +13,6 @@
     <string name="sincronizar">Sincronizar</string>
     <string name="recibir_nuevos_productos">Recibir Nuevos Productos</string>
     <string name="preferencias">Preferencias</string>
+    <string name="opciones">Opciones</string>
 
 </resources>
