--- a/Sentinel/app/src/main/res/values/strings.xml
+++ b/Sentinel/app/src/main/res/values/strings.xml
@@ -4,6 +4,6 @@
     <string name="app_name">Sentinel</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="action_refresh">Refresh</string>
+    <string name="action_refresh" translatable="false">Refresh</string>
 
 </resources>
