--- a/Sentinel/app/src/main/res/values/strings.xml
+++ b/Sentinel/app/src/main/res/values/strings.xml
@@ -6,5 +6,8 @@
     <string name="action_settings">Settings</string>
     <string name="action_refresh" translatable="false">Refresh</string>
     <string name="title_activity_detail">DetailActivity</string>
+    <string name="pref_location_default" translatable="false">94043</string>
+    <string name="pref_location_key" translatable="false">Location</string>
+    <string name="pref_location_label">Location</string>
 
 </resources>
