--- a/Sentinel/app/src/main/res/values/strings.xml
+++ b/Sentinel/app/src/main/res/values/strings.xml
@@ -4,6 +4,9 @@
     <string name="app_name">Sentinel</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="action_map">Map Location</string>
+    <string name="title_activity_settings">Settings</string>
+
     <string name="action_refresh" translatable="false">Refresh</string>
     <string name="title_activity_detail">DetailActivity</string>
     <string name="pref_location_default" translatable="false">94043</string>
